# ChangeLog for www-client/cupage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jun 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.6.ebuild:
  Keyworded amd64.

  31 May 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.5.ebuild,
  cupage-0.5.6.ebuild:
  Switched to jnrowe-github eclass.

*cupage-0.5.6 (25 May 2011)

  25 May 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.6.ebuild:
  Version bump [382].

  17 May 2011; James Rowe <jnrowe@gmail.com> -cupage-0.5.4.ebuild,
  cupage-0.5.5.ebuild:
  Keyworded x86.

  17 May 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.5.ebuild:
  Keyworded amd64.

*cupage-0.5.5 (17 Apr 2011)

  17 Apr 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.5.ebuild:
  Version bump [340].

  01 Apr 2011; James Rowe <jnrowe@gmail.com> -cupage-0.5.3.ebuild,
  cupage-0.5.4.ebuild:
  Keyworded x86.

  31 Mar 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.4.ebuild:
  Keyworded amd64.

  01 Mar 2011; James Rowe <jnrowe@gmail.com>
  -files/cupage-0.5.1-Fixed-usage-without-termstyle.patch:
  Remove obsolete files.

*cupage-0.5.4 (01 Mar 2011)

  01 Mar 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.4.ebuild:
  Version bump [295].

  02 Feb 2011; James Rowe <jnrowe@gmail.com> -cupage-0.5.1.ebuild,
  cupage-0.5.3.ebuild:
  Keyworded x86.

  02 Feb 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.3.ebuild:
  Keyworded x86.

  02 Feb 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.3.ebuild:
  Keyworded amd64.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  03 Jan 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.3.ebuild:
  Depend on termcolor, unless USE=minimal.

*cupage-0.5.2 (03 Jan 2011)

  03 Jan 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.2.ebuild:
  Version bump [245].

  20 Dec 2010; James Rowe <jnrowe@gmail.com> cupage-0.5.1.ebuild,
  +files/cupage-0.5.1-Fixed-usage-without-termstyle.patch: