@@ -1,22 +1,0 @@
-dev-python/docutils doc? ( dev-python/sphinx media-gfx/sphinxcontrib-blockdiag ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
-dev-python/configobj dev-python/httplib2 dev-python/lxml !minimal? ( dev-python/termcolor ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
-0
-https://github.com/JNRowe/cupage/tarball/0.5.5 -> cupage-0.5.5.tar.gz
-
-http://jnrowe.github.com/cupage
-GPL-3
-A tool to check for updates on web pages
-amd64 x86
-distutils eutils jnrowe-github multilib portability python toolchain-funcs
-doc minimal
-
-
-
-3
-
-compile install postinst postrm prepare test unpack
-
-
-
-
-
