@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST cupage-0.5.5.tar.gz 38702 RMD160 b3116d52748e4b945cf48ee480f3156456a20dc5 SHA1 4d61112622463fd5ba4040a88075cfcc1f226bba SHA256 58e876412f532aef2ae587c62c4a5f0a0df320754e4a36336f5a055f7a4101ab
 DIST cupage-0.5.6.tar.gz 38611 RMD160 6c60a2ac796e2d06bf129530d2ca0e847a3ac1e5 SHA1 c8be17994d52c8bc64b5aed2e021d583e88805be SHA256 8621e426db0a84e15c25f68194ef2b52dc4cb8732ed158cbd661b4751a892c6b
 DIST sphinx-jnrowe-0.1.0.tar.gz 12528 RMD160 1dd31dc49fbcba44eef8f951d5c9c769c3942e1f SHA1 68fa896f6e572c435618fd2d6712c03ccb1225f2 SHA256 f02876c099996a772a8c9d9a2bfefaddddf8eb6ff24f764f0a04bab0c454eb31
-EBUILD cupage-0.5.5.ebuild 1068 RMD160 cea0964c2a6dc5171a64eb849d36777057bac580 SHA1 9451fb65d960f9c63e380bbb70330818403246c6 SHA256 2cb28a34fa741e1faeedd5e51122e7439d22484e77d32d0c4c99a0bb4e823729
-EBUILD cupage-0.5.6.ebuild 1339 RMD160 2f545043f9864d1ae86c3b63171a88def7acb277 SHA1 f858cbbd156f3d5e1c49b1ed43acbb1044ea4edf SHA256 b3d95306a1d04f79c35163e4416ab1bd0433f7d21539351bfd955a9853ada0b4
-MISC ChangeLog 4969 RMD160 463abebf33aca673459ab6ed512ba7eab3bdb18a SHA1 272876336008fcc360614156935f2372188fa257 SHA256 95d59973433aad3e06fe2f2022f65222ee12281dfb20da7c51fa808dbd29a421
+EBUILD cupage-0.5.6.ebuild 1338 RMD160 03dc20b05114eea22fca6b68f2409829e239382a SHA1 32d58a45881528510a36a29d262c0d2b4e3cdc3e SHA256 c4f7e5bc330125610bbdfaf12f37109daff4b702bef31d3065fe7f3e46d78b56
+MISC ChangeLog 5077 RMD160 d62db23b253d5504c02c9877aec5e757fe839ab1 SHA1 d8dd1ba08402a429618d7f129b665d39ceaafa30 SHA256 08b0821a6c1bb2b1bccaa64c71f36d218310021fb7c04f4e5b1c33e4fb074ff0
 MISC metadata.xml 821 RMD160 12557063487e0e0d224e7ced43403d64d17bd8d2 SHA1 7abf40668022398ab5b2f17ae93d05720fc3aaa9 SHA256 67364238f64bd2a1a9e86722e06fe7842340bda0ec2592fb97367f6194d03b58
 MISC watch 28 RMD160 077ab1f79eca0c94ea2ce0180658eecdfdc75209 SHA1 feefe92427a000287454d84876769e4d1966d48d SHA256 a4eda7491fdb5be0331b7bf31b60296acb913baf04bf6c4532ffb58ad5929f12
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4EZWwACgkQzJrj3cAXR0nL6wCgodp7dfXU5UpHEKtbKvTT/7Mm
-XbgAnAl6cIIEZu3mJoAwyV8IBOr40sUG
-=hdxa
+iEYEARECAAYFAk4EZzIACgkQzJrj3cAXR0nIRQCgj6BPL9NKqkKa1R0pBpVlzAu5
+AnkAoKMinmbfmeaBvlIztaKKgeDujhyU
+=B1dl
 -----END PGP SIGNATURE-----
