@@ -18,7 +18,7 @@ SRC_URI="${SRC_URI}
 
 LICENSE="GPL-3 doc? ( public-domain )"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="doc minimal"
 
 DEPEND="dev-python/docutils
