@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Jun 2011; James Rowe <jnrowe@gmail.com> -cupage-0.5.5.ebuild,
+  cupage-0.5.6.ebuild:
+  Keyworded x86.
+
   24 Jun 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.6.ebuild:
   Keyworded amd64.
 
